--- a/android_iphone/index_content.html
+++ b/android_iphone/index_content.html
@@ -36,8 +36,7 @@
 		</style>
     </head>
     <body class="um-vp" ontouchstart>
-        <!--用于显示新闻幻灯片 -->
-        <div class="news ub uof" style="margin-bottom:0.5em;"><!--这里的uof是将这个DIV做为滑动的滑块-->
+        <div class="news ub uof" style="margin-bottom:0.5em;">
             <div id='slider' class='ub ub-fh'>
                 <!--滑块-->
                 <div class='ub-fh'>
